Do not encode QString to QByteArray and cast it back to QString

This causes problem when there are Unicode characters in ${HOME}

REVIEW: 114219
BUG: 327919
FIXED-IN: 4.11.5